--- a/requirements.txt
+++ b/requirements.txt
@@ -14,13 +14,13 @@ Flask-SQLAlchemy==2.4.0
 Flask-WTF==0.14.2
 Flask-User==1.0.1.5
 
-tensorflow
-keras
-numpy
-pillow
-scipy
-h5py
-matplotlib
+tensorflow==2.4.0
+keras==2.4.3
+numpy==1.19.3
+pillow==7.0.0
+scipy==1.4.1
+h5py==2.10.0
+matplotlib==3.3.2
 opencv-python
-keras-resnet
+keras-resnet==0.2.0
 imageai
