--- a/requirements.txt
+++ b/requirements.txt
@@ -6,19 +6,11 @@ Jinja2==2.11.2
 MarkupSafe==1.1.1
 Werkzeug==1.0.1
 
-# Flask Packages
-Flask-Login==0.4.0
-Flask-Migrate==2.0.2
-Flask-Script==2.0.5
-Flask-SQLAlchemy==2.4.0
-Flask-WTF==0.14.2
-Flask-User==1.0.1.5
-
-tensorflow==2.5.0
+tensorflow
 keras==2.4.3
 numpy==1.19.3
 pillow==7.0.0
-scipy==1.4.1
+scipy
 h5py==2.10.0
 matplotlib==3.3.2
 opencv-python
